--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -154,6 +154,7 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
+        <IsVisibleTab Value="True"/>
         <TopLine Value="679"/>
         <CursorPos X="59" Y="704"/>
         <UsageCount Value="207"/>
@@ -165,8 +166,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
         <EditorIndex Value="10"/>
-        <TopLine Value="201"/>
-        <CursorPos Y="222"/>
+        <TopLine Value="1037"/>
+        <CursorPos X="3" Y="1039"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -189,7 +190,6 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
         <TopLine Value="500"/>
         <CursorPos Y="520"/>
@@ -385,8 +385,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
         <EditorIndex Value="11"/>
-        <TopLine Value="539"/>
-        <CursorPos Y="560"/>
+        <TopLine Value="556"/>
+        <CursorPos X="35" Y="573"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -413,7 +413,7 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="1"/>
         <CursorPos X="20" Y="41"/>
-        <UsageCount Value="116"/>
+        <UsageCount Value="117"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit25>
@@ -421,123 +421,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1417" Column="35" TopLine="1383"/>
+        <Caret Line="1590" Column="24" TopLine="1557"/>
       </Position1>
       <Position2>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1538" Column="34" TopLine="1505"/>
+        <Caret Line="1591" Column="24" TopLine="1558"/>
       </Position2>
       <Position3>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1539" Column="24" TopLine="1506"/>
+        <Caret Line="1625" Column="83" TopLine="1591"/>
       </Position3>
       <Position4>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1588" Column="34" TopLine="1555"/>
+        <Caret Line="1633" Column="83" TopLine="1599"/>
       </Position4>
       <Position5>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1590" Column="24" TopLine="1557"/>
+        <Caret Line="1641" Column="83" TopLine="1607"/>
       </Position5>
       <Position6>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1591" Column="24" TopLine="1558"/>
+        <Caret Line="1649" Column="83" TopLine="1615"/>
       </Position6>
       <Position7>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1625" Column="83" TopLine="1591"/>
+        <Caret Line="1665" Column="36" TopLine="1631"/>
       </Position7>
       <Position8>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1633" Column="83" TopLine="1599"/>
+        <Caret Line="1666" Column="26" TopLine="1632"/>
       </Position8>
       <Position9>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1641" Column="83" TopLine="1607"/>
+        <Caret Line="1688" Column="26" TopLine="1654"/>
       </Position9>
       <Position10>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1649" Column="83" TopLine="1615"/>
+        <Caret Line="1689" Column="24" TopLine="1655"/>
       </Position10>
       <Position11>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1665" Column="36" TopLine="1631"/>
+        <Caret Line="87" Column="24" TopLine="68"/>
       </Position11>
       <Position12>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1666" Column="26" TopLine="1632"/>
+        <Caret Line="101" Column="25" TopLine="69"/>
       </Position12>
       <Position13>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1688" Column="26" TopLine="1654"/>
+        <Caret Line="110" Column="26" TopLine="78"/>
       </Position13>
       <Position14>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1689" Column="24" TopLine="1655"/>
+        <Caret Line="145" Column="84" TopLine="112"/>
       </Position14>
       <Position15>
         <Filename Value="projeto.pas"/>
-        <Caret Line="87" Column="24" TopLine="68"/>
+        <Caret Line="198" Column="66" TopLine="166"/>
       </Position15>
       <Position16>
         <Filename Value="projeto.pas"/>
-        <Caret Line="101" Column="25" TopLine="69"/>
+        <Caret Line="201" Column="96" TopLine="169"/>
       </Position16>
       <Position17>
         <Filename Value="projeto.pas"/>
-        <Caret Line="110" Column="26" TopLine="78"/>
+        <Caret Line="427" Column="30" TopLine="393"/>
       </Position17>
       <Position18>
         <Filename Value="projeto.pas"/>
-        <Caret Line="145" Column="84" TopLine="112"/>
+        <Caret Line="429" Column="49" TopLine="395"/>
       </Position18>
       <Position19>
         <Filename Value="projeto.pas"/>
-        <Caret Line="198" Column="66" TopLine="166"/>
+        <Caret Line="518" Column="31" TopLine="484"/>
       </Position19>
       <Position20>
         <Filename Value="projeto.pas"/>
-        <Caret Line="201" Column="96" TopLine="169"/>
+        <Caret Line="524" Column="39" TopLine="490"/>
       </Position20>
       <Position21>
         <Filename Value="projeto.pas"/>
-        <Caret Line="427" Column="30" TopLine="393"/>
+        <Caret Line="726" Column="41" TopLine="692"/>
       </Position21>
       <Position22>
         <Filename Value="projeto.pas"/>
-        <Caret Line="429" Column="49" TopLine="395"/>
+        <Caret Line="733" Column="41" TopLine="699"/>
       </Position22>
       <Position23>
         <Filename Value="projeto.pas"/>
-        <Caret Line="518" Column="31" TopLine="484"/>
+        <Caret Line="759" Column="34" TopLine="725"/>
       </Position23>
       <Position24>
         <Filename Value="projeto.pas"/>
-        <Caret Line="524" Column="39" TopLine="490"/>
+        <Caret Line="761" Column="17" TopLine="758"/>
       </Position24>
       <Position25>
         <Filename Value="projeto.pas"/>
-        <Caret Line="726" Column="41" TopLine="692"/>
+        <Caret Line="198" Column="14" TopLine="179"/>
       </Position25>
       <Position26>
         <Filename Value="projeto.pas"/>
-        <Caret Line="733" Column="41" TopLine="699"/>
+        <Caret Line="521" Column="18" TopLine="512"/>
       </Position26>
       <Position27>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="759" Column="34" TopLine="725"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="222" TopLine="207"/>
       </Position27>
       <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="761" Column="17" TopLine="758"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="86" Column="15" TopLine="66"/>
       </Position28>
       <Position29>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="198" Column="14" TopLine="179"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1023" Column="3" TopLine="1019"/>
       </Position29>
       <Position30>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="521" Column="18" TopLine="512"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1039" Column="3" TopLine="1037"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
