--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -20,7 +20,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="54"/>
+      <BuildNr Value="56"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
     <BuildModes Count="4" Active="Debug32">
@@ -143,7 +143,7 @@
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="2"/>
-        <CursorPos Y="27"/>
+        <CursorPos X="3" Y="10"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -154,9 +154,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
-        <IsVisibleTab Value="True"/>
-        <TopLine Value="679"/>
-        <CursorPos X="59" Y="704"/>
+        <TopLine Value="389"/>
+        <CursorPos X="10" Y="410"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -191,8 +190,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="500"/>
-        <CursorPos Y="520"/>
+        <TopLine Value="1761"/>
+        <CursorPos X="3" Y="1786"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -208,8 +207,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="164"/>
-        <CursorPos Y="185"/>
+        <TopLine Value="658"/>
+        <CursorPos Y="655"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -219,9 +218,10 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="34"/>
-        <CursorPos Y="56"/>
+        <TopLine Value="30"/>
+        <CursorPos X="3" Y="51"/>
         <UsageCount Value="205"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -385,8 +385,7 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
         <EditorIndex Value="11"/>
-        <TopLine Value="556"/>
-        <CursorPos X="35" Y="573"/>
+        <CursorPos X="13" Y="18"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -413,131 +412,131 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="1"/>
         <CursorPos X="20" Y="41"/>
-        <UsageCount Value="117"/>
+        <UsageCount Value="121"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit25>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="30" HistoryIndex="28">
       <Position1>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1590" Column="24" TopLine="1557"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="341" Column="17" TopLine="307"/>
       </Position1>
       <Position2>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1591" Column="24" TopLine="1558"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="347" Column="82" TopLine="313"/>
       </Position2>
       <Position3>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1625" Column="83" TopLine="1591"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="348" Column="17" TopLine="314"/>
       </Position3>
       <Position4>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1633" Column="83" TopLine="1599"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="472" Column="35" TopLine="449"/>
       </Position4>
       <Position5>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1641" Column="83" TopLine="1607"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="410" Column="10" TopLine="389"/>
       </Position5>
       <Position6>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1649" Column="83" TopLine="1615"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="178" Column="18" TopLine="164"/>
       </Position6>
       <Position7>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1665" Column="36" TopLine="1631"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="668" TopLine="638"/>
       </Position7>
       <Position8>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1666" Column="26" TopLine="1632"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="416" Column="36" TopLine="407"/>
       </Position8>
       <Position9>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1688" Column="26" TopLine="1654"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="34" Column="26" TopLine="13"/>
       </Position9>
       <Position10>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1689" Column="24" TopLine="1655"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="145" Column="63" TopLine="120"/>
       </Position10>
       <Position11>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="87" Column="24" TopLine="68"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="667" Column="32" TopLine="638"/>
       </Position11>
       <Position12>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="101" Column="25" TopLine="69"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="425" Column="3" TopLine="407"/>
       </Position12>
       <Position13>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="110" Column="26" TopLine="78"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="667" Column="42" TopLine="638"/>
       </Position13>
       <Position14>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="145" Column="84" TopLine="112"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="18" Column="13"/>
       </Position14>
       <Position15>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="198" Column="66" TopLine="166"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="399" Column="26" TopLine="365"/>
       </Position15>
       <Position16>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="201" Column="96" TopLine="169"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="663" Column="38" TopLine="638"/>
       </Position16>
       <Position17>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="427" Column="30" TopLine="393"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="407" TopLine="407"/>
       </Position17>
       <Position18>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="429" Column="49" TopLine="395"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="676" TopLine="638"/>
       </Position18>
       <Position19>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="518" Column="31" TopLine="484"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="34" Column="26"/>
       </Position19>
       <Position20>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="524" Column="39" TopLine="490"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="155" TopLine="120"/>
       </Position20>
       <Position21>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="726" Column="41" TopLine="692"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="689" TopLine="648"/>
       </Position21>
       <Position22>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="733" Column="41" TopLine="699"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="417" Column="30" TopLine="415"/>
       </Position22>
       <Position23>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="759" Column="34" TopLine="725"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="51" Column="23" TopLine="31"/>
       </Position23>
       <Position24>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="761" Column="17" TopLine="758"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="441" TopLine="437"/>
       </Position24>
       <Position25>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="198" Column="14" TopLine="179"/>
+        <Filename Value="formnovoprojeto.pas"/>
+        <Caret Line="56" TopLine="34"/>
       </Position25>
       <Position26>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="521" Column="18" TopLine="512"/>
+        <Filename Value="formnovoprojeto.pas"/>
+        <Caret Line="72" Column="31" TopLine="61"/>
       </Position26>
       <Position27>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="222" TopLine="207"/>
+        <Filename Value="formnovoprojeto.pas"/>
+        <Caret Line="76" Column="10" TopLine="61"/>
       </Position27>
       <Position28>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="86" Column="15" TopLine="66"/>
+        <Filename Value="formnovoprojeto.pas"/>
+        <Caret Line="71" TopLine="61"/>
       </Position28>
       <Position29>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1023" Column="3" TopLine="1019"/>
+        <Filename Value="formnovoprojeto.pas"/>
+        <Caret Line="51" Column="5" TopLine="30"/>
       </Position29>
       <Position30>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1039" Column="3" TopLine="1037"/>
+        <Filename Value="formnovoprojeto.pas"/>
+        <Caret Line="75" Column="29" TopLine="54"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
